fix: use records for DTOs, add logging, fix path traversal comment in FileSystemService